--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <h1 style=" font-size:500%;" style="text-align: center;"> Kartik sain</h1> 
 
 <img src="photo.1.jpg" tiltle "KARTIK SAIN" height "15px" width "30px" />
-<p STYLE="font-size: 300%;" > HI MYSELF KARTIK SAIN PERSUING POST GRADUATION IN  KIET GHAZB. UP </p>
-<pre> <h1 style="font-size:200%";>For Any New Projects in Jss, C++, html, CSS, Web Developer 
-Programing Coding 
+<p STYLE="font-size: 300%;" > <p> AIR 1 SSC CGL 2024
+ Celebrate your small wins
+]w Projects in Jss, C++, html, CSS, Web Developer 
+Programing Coding </p>
 Contact me :- 8859774084 
 Whatsapp me:-<a href="https://wa.me/918859774084">"Contact Me"</a> <img src="whatsapp.1.jfif" title "kartik sain" height ".002px" width ".004px" /> </pre>
 
